Ticket reference tags refer to tickets in the MongoDB JIRA tracking system:
https://jira.mongodb.org

WiredTiger release 3.2.0, 2019-05-09
------------------------------------

See the upgrading documentation for details of API and behavior changes.

Significant changes:
* WT-3968	Use compression ratio to tune page sizes
* WT-4156	Add a new salvage API option to wiredtiger_open
* WT-4192	Remove support for raw compression in WiredTiger
* WT-4426	Change WiredTiger data format to optionally include timestamps in cells
* WT-4447	Add a quota like system to manage I/O per subsystem
* WT-4670	Remove support for LevelDB APIs in WiredTiger
* WT-4765	Remove support for Helium/Levyx data sources in WiredTiger

See JIRA changelog for a full listing:
https://jira.mongodb.org/projects/WT/versions/21117

WiredTiger release 3.1.0, 2018-07-12
------------------------------------

See the upgrading documentation for details of API and behavior changes.

See JIRA changelog for a full listing:
https://jira.mongodb.org/projects/WT/versions/19708

WiredTiger release 3.0.0, 2018-01-08
------------------------------------

See the upgrading documentation for details of API and behavior changes.

Significant changes:
* WT-3039	Change the log file format to record a previous LSN record
* WT-3181	Add support for application defined transaction IDs via a mechanism called timestamps.
* WT-3310	Add support to WT_SESSION::alter to change table log setting
* WT-3389	Restructure page split code to hold a split generation for the entire operation.
* WT-3406	Fix a bug in reconciliation so that it ignores concurrent updates.
* WT-3418	Fix a block manager race in tree close/open
* WT-3435	Improvements to the cache overflow mechanism aka lookaside
* WT-3437	Improvements to auto tuning of number of eviction workers
* WT-3440	Add a log record when starting a checkpoint.
* WT-3461	Avoid hangs when system clocks move backwards by using CLOCK_MONOTONIC for pthread_cond_timedwait if possible.