@@ -1,7 +1,7 @@
 Ticket reference tags refer to tickets in the MongoDB JIRA tracking system:
 https://jira.mongodb.org
 
-WiredTiger release 3.2.0, 2019-05-09
+WiredTiger release 3.2.1, 2019-08-22
 ------------------------------------
 
 See the upgrading documentation for details of API and behavior changes.
@@ -12,11 +12,15 @@ Significant changes:
 * WT-4192	Remove support for raw compression in WiredTiger
 * WT-4426	Change WiredTiger data format to optionally include timestamps in cells
 * WT-4447	Add a quota like system to manage I/O per subsystem
+* WT-4494	Support import of of standalone WiredTiger files
 * WT-4670	Remove support for LevelDB APIs in WiredTiger
 * WT-4765	Remove support for Helium/Levyx data sources in WiredTiger
+* WT-4803	Implement file_max configuration for Cache Overflow mechanism
+* WT-4913	Fix the Windows CRC32 on blocks that aren't 8B aligned and/or multiples of 8B
 
 See JIRA changelog for a full listing:
 https://jira.mongodb.org/projects/WT/versions/21117
+https://jira.mongodb.org/projects/WT/versions/22515
 
 WiredTiger release 3.1.0, 2018-07-12
 ------------------------------------
